fixes extra space on the bottom

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,3 +3,8 @@
   background: lightgrey;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: fit-content;
+}
