--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   background: black;
   color: white;
-  padding: 30px 0;
 }
 
 .contact-header {
