--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,7 +10,6 @@
   justify-content: center;
   align-items: center;
   text-align: right;
-  margin: 50px;
 }
 
 .links a {
